examples/negative/silent_contract/tree_collision_via_import/main.kai
# Silent contract (#511 audit) — partial regression of #504:
# when user-side `type Tree` collides with an imported module's
# `pub type Tree[k, v]`, the compiler should either reject the
# collision OR shadow cleanly. Today it silently uses the imported
# Tree's constructors for match-exhaustiveness, producing
# diagnostics like "missing TreeNode, TreeLeaf" that mention
# names the user never wrote.
#
# #504 closed for the *prelude* path; the *import* path still
# carries the bug.

import lib

type Tree = Leaf | Node(Int, Tree, Tree)

fn size(t: Tree) : Int = match t {
  Leaf -> 0
  Node(_, l, r) -> 1 + size(l) + size(r)
}

fn main() : Int = size(Leaf)
